--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </dd>
         </dl>
         <div class="project__img">
-          <img class="main-img"src="./imgs/macbook.png" alt="first" />
+          <img class="main-img"src="./imgs/project.png" alt="first" />
         </div>
         <div class="project__link">
           <a href="https://www.notion.so/Front-end-5faee26ce55349868965c9ca049d8747">
@@ -94,30 +94,6 @@
       </div>
 
       <!-- toy project3 -->
-      <div class="project__item">
-        <dl>
-          <dt>
-            포트폴리오
-          </dt>
-          <dd>
-            HTML,CSS,JS로 만든 첫번째 프로젝트입니다.<br />
-          다양한 온라인 수업을 들으며, 그 내용을 적용시켜본 소중한 시간이었습니다.
-          </dd>
-        </dl>
-
-        <div class="project__img">
-          <img class="main-img"src="./imgs/macbook.png" alt="first" />
-        </div>
-        <div class="project__link">
-          <a href="https://www.notion.so/Front-end-5faee26ce55349868965c9ca049d8747">
-            <img src="./imgs/notion.png" class="notion">
-          </a>
-          <a href="https://github.com/2-3min">
-            <img src="./imgs/github.png" class="github">
-          </a>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- CONTACT -->
